[package]
name = "patched_conics_test"
version = "0.1.0"
publish = false
edition = "2021"
exclude = ["dist", "build", "assets"]

[workspace]
members = []

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "default_font",
    "multi-threaded",
    "png",
    "hdr",
    "tonemapping_luts",
    "x11",
    "bevy_gizmos",
    "bevy_debug_stepping",
] }
bevy_asset_loader = { version = "0.20" }
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1"
